# py-exhaust-ma

./: .gitignore  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: push.yml  pythonpublish.yml  tests.yml
exhaust_ma/: __init__.py  __main__.py  build_cffi.py  core.py  instruction.py  warrior.py
exhaust_ma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
exhaust_ma/tests/: test_core_close.py  test_core_getitem.py  test_instruction_formatter.py  test_modifying_core_settings.py  test_simple_warriors.py  test_warrior_getitem.py
