[project]
name = "py-exhaust-ma"
version = "0.1.0"
description = "Fast CoreWars redcode simulator, python bindings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cffi>=2.0.0",
    "setuptools>=82.0.1",
]
keywords = ["corewars", "redcode", "mars"]


[build-system]
requires = ["setuptools>=82.0.1", "wheel", "cffi>=2.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["exhaust_ma"]

[tool.setuptools.package-data]
exhaust_ma = ["*"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "setuptools>=82.0.1",
]
